<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_launch</name>
  <version>0.4.10</version>
  <description>This rqt plugin ROS package provides easy view of .launch files.
  User can also start and end node by node that are defined in those files.
  </description>

  <maintainer email="iisaito@kinugarage.com">Isaac I.Y. Saito</maintainer>
  <maintainer email="ryan@rwsinnet.com">Ryan Sinnet</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_launch</url>
  <url type="repository">https://github.com/ros-visualization/rqt_launch</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_launch/issues</url>

  <author>Isaac Saito</author>
  <author>Stuart Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>rqt_py_common</build_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <export>
    <architecture_independent/>
		<rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
